[project]
name = "cv_enhancer"
version = "0.1.0"
description = "cv_enhancer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
cv_enhancer = "cv_enhancer.main:run"
run_crew = "cv_enhancer.main:run"
train = "cv_enhancer.main:train"
replay = "cv_enhancer.main:replay"
test = "cv_enhancer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
